--- a/ABS/ABS/ABS.csproj
+++ b/ABS/ABS/ABS.csproj
@@ -59,6 +59,7 @@
     <Content Include="CSS\Site.css" />
     <Content Include="JS\jquery-1.5.1.min.js" />
     <Content Include="JS\Site.js" />
+    <Content Include="Management.aspx" />
     <Content Include="Staff\MakeAppointment.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -87,13 +88,27 @@
       <DependentUpon>ConferenceRooms.aspx</DependentUpon>
     </Compile>
     <Compile Include="BusinessObject\Class1.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ABS.Master.cs">
-      <DependentUpon>ABS.Master</DependentUpon>
+    <Compile Include="Management.aspx.cs">
+      <DependentUpon>Management.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ABS.Master.designer.cs">
-      <DependentUpon>ABS.Master</DependentUpon>
+    <Compile Include="Management.aspx.designer.cs">
+      <DependentUpon>Management.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin.master.cs">
+      <DependentUpon>Admin.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin.master.designer.cs">
+      <DependentUpon>Admin.master</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.Master.cs">
+      <DependentUpon>User.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User.Master.designer.cs">
+      <DependentUpon>User.Master</DependentUpon>
     </Compile>
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
@@ -125,13 +140,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ABS.Master" />
+    <Content Include="User.Master" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\admin\admin.skin" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\user\user.skin" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Admin.master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
