--- a/ABS/ABS/ABS.csproj
+++ b/ABS/ABS/ABS.csproj
@@ -53,15 +53,24 @@
   <ItemGroup>
     <Content Include="Admin\Appointments.aspx" />
     <Content Include="Admin\ConferenceRooms.aspx" />
+    <Content Include="App_Themes\admin\abs-logo.png" />
+    <Content Include="App_Themes\admin\admin.css" />
+    <Content Include="App_Themes\admin\left-bg.jpg" />
+    <Content Include="App_Themes\user\abs-logo.png" />
+    <Content Include="App_Themes\user\left-bg.jpg" />
     <Content Include="App_Themes\user\user.css" />
+    <Content Include="CheckAvailability.aspx" />
     <Content Include="CSS\img\left-bg.jpg" />
     <Content Include="CSS\img\logo.jpg" />
     <Content Include="CSS\Site.css" />
     <Content Include="JS\jquery-1.5.1.min.js" />
     <Content Include="JS\Site.js" />
+    <Content Include="MakeAppointment.aspx" />
     <Content Include="Management.aspx" />
     <Content Include="Staff\MakeAppointment.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -88,6 +97,20 @@
       <DependentUpon>ConferenceRooms.aspx</DependentUpon>
     </Compile>
     <Compile Include="BusinessObject\Class1.cs" />
+    <Compile Include="CheckAvailability.aspx.cs">
+      <DependentUpon>CheckAvailability.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CheckAvailability.aspx.designer.cs">
+      <DependentUpon>CheckAvailability.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MakeAppointment.aspx.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MakeAppointment.aspx.designer.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Management.aspx.cs">
       <DependentUpon>Management.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -151,6 +174,7 @@
   <ItemGroup>
     <Content Include="Admin.master" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
