More changes, Put all admin pages into Admin folder.
Enabled roles and user types…..

--- a/ABS/ABS/Web.config
+++ b/ABS/ABS/Web.config
@@ -1,38 +1,45 @@
 <?xml version="1.0"?>
 
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 
 <configuration>
   <connectionStrings>
-    <add name="myconnectionstring" connectionString="data source=potoroo.cs.rmit.edu.au;;uid=s3241055_wdt;pwd=coops;initial catalog=s3241055_wdt"/>
+    <add name="myconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
     
-    <add name="SqlRoleManagerConnection"
-connectionString="data source=potoroo.cs.rmit.edu.au;&#xA;uid=s3241055_wdt;pwd=coops;&#xA;initial catalog=s3241055_wdt;"
-
-                              />
+      
+      
   </connectionStrings>
     <system.web>
-        
-        <roleManager enabled="true" />
         <compilation debug="true" targetFramework="4.0" />
-      <membership>
-        <providers>
-          <clear />
-          <add name="AspNetSqlMembershipProvider"
-          type="System.Web.Security.SqlMembershipProvider, System.Web,&#xA;Version=4.0.0.0, Culture=neutral,&#xA;PublicKeyToken=b03f5f7f11d50a3a"
 
+        <authentication mode="Forms">
+            <forms loginUrl="~/Login.aspx" timeout="2880" />
+        </authentication>
 
-          connectionStringName="SqlRoleManagerConnection"
-          requiresQuestionAndAnswer="false"
-          requiresUniqueEmail="true"
-          passwordFormat="Hashed"
-          minRequiredNonalphanumericCharacters="0"
-          minRequiredPasswordLength="3" />
-        </providers>
-      </membership>
+        <membership>
+            <providers>
+                <clear/>
+                <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="myconnectionstring"
+                     enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
+                     maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
+                     applicationName="/" />
+            </providers>
+        </membership>
+
+        <profile>
+            <providers>
+                <clear/>
+                <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="myconnectionstring" applicationName="/"/>
+            </providers>
+        </profile>
+
+        <roleManager enabled="true">
+            <providers>
+                <clear/>
+                <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="myconnectionstring" applicationName="/" />
+                <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+            </providers>
+        </roleManager>
+
     </system.web>
 
 </configuration>
