--- a/ABS/ABS/ABS.csproj
+++ b/ABS/ABS/ABS.csproj
@@ -72,9 +72,12 @@
     <Content Include="CSS\Site.css" />
     <Content Include="JS\jquery-1.5.1.min.js" />
     <Content Include="JS\Site.js" />
+    <Content Include="Logout.aspx" />
     <Content Include="MakeAppointment.aspx" />
-    <Content Include="Management.aspx" />
+    <Content Include="Admin\Management.aspx" />
+    <Content Include="NavControl.ascx" />
     <Content Include="Staff\MakeAppointment.aspx" />
+    <Content Include="statusControl.ascx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -112,6 +115,13 @@
     <Compile Include="CheckAvailability.aspx.designer.cs">
       <DependentUpon>CheckAvailability.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MakeAppointment.aspx.cs">
       <DependentUpon>MakeAppointment.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -119,21 +129,42 @@
     <Compile Include="MakeAppointment.aspx.designer.cs">
       <DependentUpon>MakeAppointment.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Management.aspx.cs">
+    <Compile Include="Admin\Management.aspx.cs">
       <DependentUpon>Management.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Management.aspx.designer.cs">
+    <Compile Include="Admin\Management.aspx.designer.cs">
       <DependentUpon>Management.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Admin.master.cs">
+    <Compile Include="Admin\Admin.master.cs">
       <DependentUpon>Admin.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Admin.master.designer.cs">
+    <Compile Include="Admin\Admin.master.designer.cs">
       <DependentUpon>Admin.master</DependentUpon>
+    </Compile>
+    <Compile Include="NavControl.ascx.cs">
+      <DependentUpon>NavControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NavControl.ascx.designer.cs">
+      <DependentUpon>NavControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="NestedMasterPage2.master.cs">
+      <DependentUpon>NestedMasterPage2.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NestedMasterPage2.master.designer.cs">
+      <DependentUpon>NestedMasterPage2.master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="statusControl.ascx.cs">
+      <DependentUpon>statusControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="statusControl.ascx.designer.cs">
+      <DependentUpon>statusControl.ascx</DependentUpon>
+    </Compile>
     <Compile Include="User.Master.cs">
       <DependentUpon>User.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -180,9 +211,11 @@
     <Content Include="App_Themes\user\user.skin" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Admin.master" />
+    <Content Include="Admin\Admin.master" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="NestedMasterPage2.master" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
