--- a/ABS/ABS/Web.config
+++ b/ABS/ABS/Web.config
@@ -9,6 +9,7 @@
       
   </connectionStrings>
     <system.web>
+        <customErrors defaultRedirect="~/Errors/ErrorPage.aspx" />
         <compilation debug="true" targetFramework="4.0" />
 
         <authentication mode="Forms">
