--- a/ABS/ABS/ABS.csproj
+++ b/ABS/ABS/ABS.csproj
@@ -33,8 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AjaxControlToolkit">
-      <HintPath>C:\AjaxControlToolkit.Binary.NET4\AjaxControlToolkit.dll</HintPath>
+    <Reference Include="AjaxControlToolkit, Version=4.1.40412.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\AjaxControlToolkit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
@@ -62,15 +63,21 @@
     <Content Include="App_Themes\user\abs-logo.png" />
     <Content Include="App_Themes\user\left-bg.jpg" />
     <Content Include="App_Themes\user\user.css" />
+    <Content Include="bin\ABS.dll" />
+    <Content Include="bin\ABS.pdb" />
+    <Content Include="bin\AjaxControlToolkit.dll" />
     <Content Include="CheckAvailability.aspx" />
     <Content Include="CSS\img\left-bg.jpg" />
     <Content Include="CSS\img\logo.jpg" />
     <Content Include="CSS\Site.css" />
-    <Content Include="images\calendar_icon.gif" />
     <Content Include="JS\jquery-1.5.1.min.js" />
     <Content Include="JS\Site.js" />
-    <Content Include="Management.aspx" />
+    <Content Include="Logout.aspx" />
+    <Content Include="MakeAppointment.aspx" />
+    <Content Include="Admin\Management.aspx" />
+    <Content Include="NavControl.ascx" />
     <Content Include="Staff\MakeAppointment.aspx" />
+    <Content Include="statusControl.ascx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -80,17 +87,11 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="Home.aspx" />
     <Content Include="Login.aspx" />
-    <Content Include="WebForm1.aspx" />
+    <Content Include="Signup.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin.master.cs">
-      <DependentUpon>Admin.master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin.master.designer.cs">
-      <DependentUpon>Admin.master</DependentUpon>
-    </Compile>
     <Compile Include="Admin\Appointments.aspx.cs">
       <DependentUpon>Appointments.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -107,7 +108,6 @@
     </Compile>
     <Compile Include="BusinessObjects\Booking.cs" />
     <Compile Include="BusinessObjects\Class1.cs" />
-    <Compile Include="BusinessObjects\DBUtil.cs" />
     <Compile Include="CheckAvailability.aspx.cs">
       <DependentUpon>CheckAvailability.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -115,27 +115,55 @@
     <Compile Include="CheckAvailability.aspx.designer.cs">
       <DependentUpon>CheckAvailability.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Management.aspx.cs">
+    <Compile Include="Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MakeAppointment.aspx.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MakeAppointment.aspx.designer.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Management.aspx.cs">
       <DependentUpon>Management.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Management.aspx.designer.cs">
+    <Compile Include="Admin\Management.aspx.designer.cs">
       <DependentUpon>Management.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Admin.master.cs">
+      <DependentUpon>Admin.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Admin.master.designer.cs">
+      <DependentUpon>Admin.master</DependentUpon>
+    </Compile>
+    <Compile Include="NavControl.ascx.cs">
+      <DependentUpon>NavControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NavControl.ascx.designer.cs">
+      <DependentUpon>NavControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="NestedMasterPage2.master.cs">
+      <DependentUpon>NestedMasterPage2.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NestedMasterPage2.master.designer.cs">
+      <DependentUpon>NestedMasterPage2.master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
+    <Compile Include="statusControl.ascx.cs">
+      <DependentUpon>statusControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Staff\MakeAppointment.aspx.cs">
-      <DependentUpon>MakeAppointment.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Staff\MakeAppointment.aspx.designer.cs">
-      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+    <Compile Include="statusControl.ascx.designer.cs">
+      <DependentUpon>statusControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="User.Master.cs">
       <DependentUpon>User.Master</DependentUpon>
@@ -144,13 +172,37 @@
     <Compile Include="User.Master.designer.cs">
       <DependentUpon>User.Master</DependentUpon>
     </Compile>
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Signup.aspx.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Signup.aspx.designer.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Staff\MakeAppointment.aspx.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff\MakeAppointment.aspx.designer.cs">
+      <DependentUpon>MakeAppointment.aspx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="User.Master" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\admin\admin.skin" />
@@ -159,13 +211,10 @@
     <Content Include="App_Themes\user\user.skin" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="bin\" />
+    <Content Include="Admin\Admin.master" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="User.Master" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Admin.master" />
+    <Content Include="NestedMasterPage2.master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
