--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -12,6 +12,7 @@
     </connectionStrings>
     <system.web>
         <!--<roleManager enabled="true" />-->
+        <roleManager enabled="true" />
         <authentication mode="Forms">
             <!--<forms name="AdminCookie" loginUrl="~/Login.aspx" protection="All" timeout="30" path="/" />-->
             
@@ -19,9 +20,7 @@
         </authentication>
 
         <authorization>
-            <!--<allow roles="Admin"  />
-            <deny users="*" />
-            <allow roles="Staff"  />-->
+            <deny roles="Admin" />
         </authorization>
 
       
@@ -29,7 +28,14 @@
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
+    <location path="AdminFolderManagement.aspx" >
 
+        <system.web>
+            <authorization>
+                <deny roles="Staff" />
+            </authorization>
+        </system.web>
+    </location>
    
     <!-- other configuration settings here -->
 
