--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -10,7 +10,10 @@
 		<add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
 		<add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
         <add name="Michaelconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
-        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/> 
+        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
+
+
+        
     </connectionStrings>
     <system.web>
         <!--<roleManager enabled="true" />-->
@@ -28,9 +31,24 @@
       
     
         <compilation debug="true" targetFramework="4.0" />
+        <membership>
+            <providers>
+                <clear />
+                <add name="AspNetSqlMembershipProvider"
+                type="System.Web.Security.SqlMembershipProvider, System.Web,
+Version=4.0.0.0, Culture=neutral,
+PublicKeyToken=b03f5f7f11d50a3a"
+                connectionStringName="RMITconnectionstring"
+                requiresQuestionAndAnswer="false"
+                requiresUniqueEmail="true"
+                passwordFormat="Hashed"
+                minRequiredNonalphanumericCharacters="0"
+                minRequiredPasswordLength="3" />
+            </providers>
+        </membership>
     </system.web>
 
-    <location path="AdminFolderManagement.aspx" >
+    <location path="AdminFolder/Management.aspx" >
 
         <system.web>
             <authorization>
