--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -7,10 +7,14 @@
 
 <configuration>
     <connectionStrings>
-		<add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-		<add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-        <add name="Michaelconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
-        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
+        
+        <!--Dracos Connection String-->
+		<!--<add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
+		<add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>-->
+
+        <!--Michael Connection Strings-->
+        <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/> 
+        <add name="Dconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
 
 
         
@@ -38,7 +42,7 @@
                 type="System.Web.Security.SqlMembershipProvider, System.Web,
 Version=4.0.0.0, Culture=neutral,
 PublicKeyToken=b03f5f7f11d50a3a"
-                connectionStringName="RMITconnectionstring"
+                connectionStringName="Dconnectionstring"
                 requiresQuestionAndAnswer="false"
                 requiresUniqueEmail="true"
                 passwordFormat="Hashed"
