--- a/ABS2/ABS2/ABS2.csproj
+++ b/ABS2/ABS2/ABS2.csproj
@@ -75,7 +75,9 @@
     <Content Include="Logout.aspx" />
     <Content Include="MakeAppointment.aspx" />
     <Content Include="SignUp.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
