--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -18,11 +18,11 @@
         <add name="Dconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
 
 
-        <add name="Michaelconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
-        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
-      <add name="myConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True" />
+        <add name="myConnectionString" connectionString="Data Source=Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
+        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
+      <!--<add name="myConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True" />-->
 
-
+<!---->
         
     </connectionStrings>
     <system.web>
