--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -6,9 +6,9 @@
 <configuration>
     <connectionStrings>
       <!--Dracos Connection String-->
-      <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-      <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-      <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
+      <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
+      <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
+      <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
       
       <!--Michael Connection Strings
       <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/> 
