Sign Up ajax for username check and style added for errors and validation on SignUp

--- a/ABS2/ABS2/ABS2.csproj
+++ b/ABS2/ABS2/ABS2.csproj
@@ -187,7 +187,9 @@
     <Content Include="App_Themes\Admin\Admin.skin" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AdminFolder\Web.config" />
+    <Content Include="AdminFolder\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="AdminFolder\Web.Debug.config">
