--- a/ABS2/ABS2/AdminFolder/web.config
+++ b/ABS2/ABS2/AdminFolder/web.config
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
+      <!--Dracos Connection String-->
+      <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
+      <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
+      <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
 
 
-        <!--Dracos Connection String-->
-        <!--<add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-		<add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=ABS;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>-->
+      <!--Michael Connection Strings
+    <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/> 
+    <add name="Dconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/>
+    <add name="myConnectionString" connectionString="Data Source=Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
+    -->
 
-        <!--Michael Connection Strings-->
-        <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
-        <add name="Dconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=Assignment2;Persist Security Info=True;User ID=sa;Password=cp123"/>
+      <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
 
-
-        <add name="myConnectionString" connectionString="Data Source=Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
-        <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;Initial Catalog=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
-        <!--<add name="myConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True" />-->
-
-        <!---->
-
+      <!--SHRIDHAR Connection Strings
+    <add name="appConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True"/> 
+    <add name="Dconnectionstring" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True"/>
+    <add name="myConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True" />
+    -->
     </connectionStrings>
     <system.web>
         
