changes to commit

--- a/ABS2/ABS2/AdminFolder/web.config
+++ b/ABS2/ABS2/AdminFolder/web.config
@@ -22,10 +22,11 @@
     -->
     </connectionStrings>
     <system.web>
+       
         
         
         <authorization>
-            <allow users="?" />
+            <deny users="?" />
             <allow roles="Admin"/>
         </authorization>
     </system.web>
