--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -24,11 +24,9 @@
     -->
   </connectionStrings>
   <system.web>
-    <!--<roleManager enabled="true" />-->
+   
     <roleManager enabled="true" />
-    <authentication mode="Forms">
-      <!--<forms name="AdminCookie" loginUrl="~/Login.aspx" protection="All" timeout="30" path="/" />-->
-    </authentication>
+    <authentication mode="Forms" />
 
     <authorization>
       <deny roles="Admin" />
@@ -39,9 +37,9 @@
       <providers>
         <clear />
         <add name="AspNetSqlMembershipProvider"
-        type="System.Web.Security.SqlMembershipProvider, System.Web,
-Version=4.0.0.0, Culture=neutral,
-PublicKeyToken=b03f5f7f11d50a3a"
+        type="System.Web.Security.SqlMembershipProvider, System.Web,&#xD;&#xA;Version=4.0.0.0, Culture=neutral,&#xD;&#xA;PublicKeyToken=b03f5f7f11d50a3a"
+
+
         connectionStringName="Dconnectionstring"
         requiresQuestionAndAnswer="false"
         requiresUniqueEmail="true"
@@ -52,7 +50,7 @@ PublicKeyToken=b03f5f7f11d50a3a"
     </membership>
   </system.web>
 
-  <location path="AdminFolder/Management.aspx" >
+  <location path="AdminFolder/AdminLogin.aspx" >
     <system.web>
       <authorization>
         <deny roles="Staff" />
