--- a/ABS2/ABS2/AdminFolder/web.config
+++ b/ABS2/ABS2/AdminFolder/web.config
@@ -26,7 +26,7 @@
         
         
         <authorization>
-            <deny users="?" />
+            <allow users="?" />
             <allow roles="Admin"/>
         </authorization>
     </system.web>
