--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -5,18 +5,18 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Dracos Connection String
+    <!--Dracos Connection String-->
     <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
     <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
     <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
--->
 
-    <!--Michael Connection Strings-->
+
+    <!--Michael Connection Strings
     <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/> 
     <add name="Dconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/>
     <add name="myConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
     <add name="RMITconnectionstring" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Integrated Security=True;User ID=sa;Password=cp123"/>
-
+-->
     <!--SHRIDHAR Connection Strings
     <add name="appConnectionString" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True"/> 
     <add name="Dconnectionstring" connectionString="Data Source=SHRIDHAR-PC\MSSQLRMIT;database=BookingSystemDB;uid=sa;pwd=mssqlrmit2008;Integrated Security=True"/>
