--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -29,7 +29,7 @@
     <authentication mode="Forms" />
 
     <authorization>
-      <deny roles="Admin" />
+      <allow roles="Admin" />
     </authorization>
 
     <compilation debug="true" targetFramework="4.0" />
