--- a/ABS2/ABS2/ABS2.csproj
+++ b/ABS2/ABS2/ABS2.csproj
@@ -63,6 +63,7 @@
     </Content>
     <Content Include="App_Themes\Admin\Admin.css" />
     <Content Include="App_Themes\Admin\images\abs-logo-admin.png" />
+    <Content Include="App_Themes\User\images\calendar_icon.gif" />
     <Content Include="App_Themes\User\User.css" />
     <Content Include="bin\AjaxControlToolkit.dll" />
     <Content Include="CheckAvailability.aspx" />
