--- a/ABS2/ABS2/web.config
+++ b/ABS2/ABS2/web.config
@@ -8,8 +8,8 @@
     <!--Dracos Connection String
     <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
     <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
-    <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
--->
+    <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />-->
+
 
     <!--Michael Connection Strings-->
     <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/> 
@@ -29,7 +29,7 @@
     <authentication mode="Forms" />
 
     <authorization>
-      <allow roles="Admin" />
+      <!--<allow roles="Admin" />-->
     </authorization>
 
     <compilation debug="true" targetFramework="4.0" />
@@ -41,7 +41,7 @@
 
 
         connectionStringName="Dconnectionstring"
-        requiresQuestionAndAnswer="false"
+        requiresQuestionAndAnswer="true"
         requiresUniqueEmail="true"
         passwordFormat="Hashed"
         minRequiredNonalphanumericCharacters="0"
@@ -50,13 +50,13 @@
     </membership>
   </system.web>
 
-  <location path="AdminFolder/AdminLogin.aspx" >
+  <!--<location path="~/AdminFolder" >
     <system.web>
       <authorization>
         <deny roles="Staff" />
       </authorization>
     </system.web>
-  </location>
+  </location>-->
 
   <!-- other configuration settings here -->
 
