--- a/ABS2/ABS2/AdminFolder/web.config
+++ b/ABS2/ABS2/AdminFolder/web.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
-      <!--Dracos Connection String
+      <!--Dracos Connection String-->
       <add name="appConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
       <add name="Dconnectionstring" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password="/>
       <add name="myConnectionString" connectionString="Data Source=DEE-LG-RD400\SQLEXPRESS;Initial Catalog=BookingSystemDB;Persist Security Info=True;Integrated Security=SSPI;User ID=DEE-LG-RD400\Dee;Password=" />
--->
+
 
      <!-- Michael Connection Strings
     <add name="appConnectionString" connectionString="Data Source=WIN-BOP3PF3J8CC\SQLEXPRESSRMIT;database=BookingSystemDB;Persist Security Info=True;User ID=sa;Password=cp123"/> 
@@ -26,8 +26,8 @@
         
         <!--
         <authorization>
-            <!--<allow users="?" />
-            <allow roles="Admin"/>-->
+            <allow users="?" />
+            <allow roles="Admin"/>
         </authorization>
         -->
     </system.web>
